<?xml version="1.0"?>
<package format="2">
    <name>LEMON</name>
    <version>1.3.1</version>
    <description>LEMON Graph Library</description>
    <maintainer email="tpetricek@gmail.com">Tomas Petricek</maintainer>
    <license>Boost Software License, Version 1.0</license>
    <url>http://lemon.cs.elte.hu/trac/lemon</url>
    <author>See AUTHORS</author>
    <buildtool_depend>cmake</buildtool_depend>
    <exec_depend>catkin</exec_depend>
    <export>
        <build_type>cmake</build_type>
    </export>
</package>
